# audiollm-server

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.sh
backend/: api.json.example  asr_client.py  asr_streaming_session.py  audio_utils.py  config.json  config.py  fusion.py  hotword_service.py  llm_client.py  main.py  prompt.py  requirements.txt  server.sh  server_qwen.sh  session.py  vad_processor.py
backend/asr/: __init__.py  client.py  fusion.py  hotword.py
backend/audio/: __init__.py  utils.py  vad.py
backend/emotion/: __init__.py  client.py  prompt.py
backend/streaming/: __init__.py  audio_stream.py  events.py  session.py
backend/tasks/: __init__.py  asr.py  base.py  emotion.py  ts_asr.py
backend/tsasr/: __init__.py  client.py  enrollment.py  prompt.py
bench_results/: bench_emotion_20260422_105202.json  情感识别压测报告.md
docs/: emotion-segmented-streaming-protocol.md  emotion-streaming-protocol.md  transcribe-streaming-protocol.md  tsasr.md
frontend/: app.js  audio-processor.js  audio-upload.js  emotion-app.js  emotion.html  i18n.js  index.html  sidebar.js  style.css  tsasr-app.js  tsasr-processor.js  tsasr.css  tsasr.html
scripts/: bench_emotion_vllm.py  restart_service.sh  start_vllm_amphion.sh  start_vllm_qwen.sh
skills/: .skills_store_lock.json
tests/: test_emotion_ws_client.py  test_streaming_unit.py  test_tsasr.py  test_ws_client.py
