[project]
name = "audiollm-demo"
version = "0.1.0"
description = "Real-time audio transcription demo with dual-ASR fusion (Amphion + Qwen) and TEN VAD"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Amphion Team"}]
keywords = ["asr", "speech-recognition", "vllm", "vad", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "httpx",
    "numpy",
    "ten-vad",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["ruff", "websockets"]

[project.urls]
Homepage = "https://github.com/open-mmlab/Amphion"
Repository = "https://github.com/open-mmlab/Amphion"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"backend/asr/prompt.py" = ["E501"]
"tests/*" = ["E501"]
